--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-<script src="trocando-de-valores.js"></script>
+<!--
+<script src="Fizzbuzz/fizzBuzz.js"></script>
+<script src="trocando-de-valores/trocando-de-valores.js"></script>
+<script src="maximo-entre-dois-valores/maximo-entre-dois-valores.js"></script>
+-->
 </body>
 </html>
