quatro projetos resolvidos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <script src="Fizzbuzz/fizzBuzz.js"></script>
 <script src="trocando-de-valores/trocando-de-valores.js"></script>
 <script src="maximo-entre-dois-valores/maximo-entre-dois-valores.js"></script>
+<script src="medidor-de-velocidade/medidor-de-velocidade.js"></script>
+<script src="par-impar/par-impar.js"></script>
+<script src="encrontre-a-string/encontre-a-string.js"></script>
 -->
+<script src="encontre-os-multiplos/encontre-os-multiplos.js"></script>
 </body>
 </html>
